--- a/css/styles.css
+++ b/css/styles.css
@@ -40,11 +40,9 @@ img {
 }
 
 .container {
-    max-width: 1158px;
-    padding-left: 15px; 
-    padding-right: 15px;
-    margin-left: 0;
-    margin-right: 0;
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
 .button-set {
@@ -57,16 +55,17 @@ img {
     display: block;
     margin: auto;
     margin-top: 48px;
-    padding: 16px 32px;
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     border: none;
+    min-width: 169px;
+    height: 56px;
+    cursor: pointer;
     
 }
 .button-set:hover,
 .button-set:focus {
     background-color: #404bbf;
-    cursor: pointer;
 }
 
 ul {
@@ -83,6 +82,7 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
 }
 .nav-type .nav-menu:hover,
 .nav-type .nav-menu:focus {
@@ -101,10 +101,33 @@ a {
     text-transform: uppercase;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    margin-right: 76px;
 }
 
 .studio-color {
     color: #2e2f42;
+}
+.header-div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.nav-type {
+    display: flex;
+    align-items: center;
+}
+
+.nav-ul {
+    display: flex;
+    justify-content: space-around;
+    gap: 40px;
+    margin: 0;
+}
+.address-ul {
+    display: flex;
+    gap: 40px; 
 }
 
 address {
@@ -124,12 +147,14 @@ address {
 }
 
 .first-header {
-    text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+    text-align: center;
+    max-width: 496px;
+    margin: 0 auto;
 }
 
-.feat-hidden {
+.visually-hidden {
     display: none;
 }
 
@@ -137,7 +162,7 @@ address {
     display: flex;
     margin: 0;
     padding: 0;
-    flex-basis: calc((100% - 72px) / 4);
+    gap: 24px;
 }
 
 .features {
@@ -147,6 +172,10 @@ address {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+}
+
+.features-items {
+    width: calc((100% - 72px) / 4);
 }
 
 .features-text {
@@ -170,30 +199,34 @@ address {
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0 0 4px 4px;
 }
 
 .team-list {
     display: flex;
     padding: 0;
     gap: 24px;
-    /* flex-basis: calc((100% - 72px) / 4); */
 }
 
-
+.team-info {
+    padding: 32px 0;
+}
 .team-members {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42; 
-    margin: 32px auto 8px;
+    text-align: center;
+    margin-bottom: 8px;
 }
 .team-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin: 0 auto 32px;
+    text-align: center;
 }
 
 .portfolio-title {
@@ -209,33 +242,24 @@ address {
     display: flex;
     flex-wrap: wrap;
     padding: 0;
-    row-gap: 40px;
+    row-gap: 48px;
     column-gap: 24px;
 }
 .portfolio-items {
-    display: flex;
-    flex-direction: column;
+    width: calc((100% - 48px) / 3);
 }
-.portfolio-items .features {
-    padding-top: 32px;
-    padding-left: 16px;
-    padding-bottom: 8px;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
-    margin: 0;
-}
-.portfolio-items .features-text {
-    padding-left: 16px;
-    padding-bottom: 32px;
-    border-bottom: 1px solid #e7e9fc;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
+
+.portfolio-app {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .footer-section {
     background-color: #2e2f42;
     display: flex;
     flex-direction: column;
+    padding: 100px 0;
 }
 .footer-section .logo-type {
     font-family: "Raleway", sans-serif;
@@ -245,10 +269,11 @@ address {
     text-transform: uppercase;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    padding-top: 100px;
-    padding-bottom: 16px;
 }
-
+.footer-div .logo-type {
+    display: inline-block;
+    margin-bottom: 16px;
+}
 .studio-color-footer {
     color: #f4f4fd;
 }
@@ -256,40 +281,12 @@ address {
     line-height: 1.5;
     color: #f4f4fd;
     letter-spacing: 0.02em;
-    padding-bottom: 100px;
-    width: 264px;
-}
-
-.header-flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #e7e9fc;
-}
-
-.nav-type {
-    display: flex;
-    align-items: center;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.nav-ul {
-    display: flex;
-    justify-content: space-around;
-    gap: 40px;
-    padding: 24px 0;
-    margin: 0;
-    margin-left: 76px;
-}
-.address-ul {
-    display: flex;
-    gap: 40px; 
+    max-width: 264px;
 }
 
 .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 188px;
+    padding-bottom: 188px;
     background-color: #F4F4FD;
 }
 .section:nth-child(even) {
@@ -299,3 +296,14 @@ address {
 .section:first-child {
     background-color: #2e2f42;
 }
+
+.section-three {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: #F4F4FD;
+}
+.section-four {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: #fff;
+} 
