--- a/css/styles.css
+++ b/css/styles.css
@@ -160,11 +160,13 @@ address {
     width: 1px;
     height: 1px;
     margin: -1px;
-    padding: 0;
-    overflow: hidden;
     border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
     clip: rect(0 0 0 0);
-}
+    overflow: hidden;
+  }
 
 
 .features-list {
@@ -317,7 +319,12 @@ address {
     background-color: #fff;
 } 
 .section-one {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 188px;
+    padding-bottom: 188px;
     background-color: #2e2f42;
 } 
+.section-two {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: #fff;
+}
